--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.3",
+    "cross-env": "^10.1.0",
+    "framer-motion": "^12.34.3",
+    "googleapis": "^171.4.0",
+    "jose": "^6.1.3",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
